# Hx-CFD

./: .gitignore  HX-CFD-Local-First-Integration-Architecture.md  HX-CFD-Master-Prompt-v2.md  HX_CFD_Dependency_Role_Map.md  HX_CFD_Master_Engineering_Prompt.md  NOTICE  README.md  THIRD_PARTY_LICENCES.md  b_release -a  sonar-project.properties
cfd-platform/: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  ARCHITECTURE.md  CHANGELOG.md  CONTINUATION.md  CONTRIBUTING.md  Cargo.toml  ENGINEERING_AUDIT.md  INSTALLATION.md  QUICKSTART.md  README_BROWSER_SETUP.md  SETUP_COMPLETE.md  backend.spec  bandit.yaml  build.py  build.rs  docker-compose.yml  hx-cfd.rc  main.py  package.json  pytest.ini  requirements.txt  setup.ps1  setup.sh  start.bat  start.sh  tauri.conf.json
cfd-platform/.github/workflows/: ci.yml  security.yml
cfd-platform/backend/: __init__.py  alembic.ini  celery_app.py  check_tables.py  check_user.py  main.py  pyproject.toml
cfd-platform/backend/alembic/: env.py
cfd-platform/backend/alembic/versions/: 001_initial_migration.py
cfd-platform/backend/api/: __init__.py  meshes.py  optimization.py  pipeline_routes.py  projects.py  routes.py  simulations.py  visualization.py
cfd-platform/backend/api/v1/: __init__.py  router.py
cfd-platform/backend/core/: __init__.py  config.py  errors.py  logging.py  logging_config.py  monitoring.py  security.py
cfd-platform/backend/core/errors/: __init__.py  errors.py
cfd-platform/backend/core/logging/: logging.py
cfd-platform/backend/db/: init_db.py  models.py  schemas.py
cfd-platform/backend/infrastructure/dependency_manager/: __init__.py
cfd-platform/backend/infrastructure/service_manager/: README.md  __init__.py  default_services.py  manager.py
cfd-platform/backend/integrations/freecad/: __init__.py  client.py
cfd-platform/backend/integrations/gmsh/: __init__.py  client.py
cfd-platform/backend/integrations/nevergrad/: __init__.py  client.py
cfd-platform/backend/integrations/openfoam/: __init__.py  client.py
cfd-platform/backend/integrations/openmdao/: __init__.py  client.py
cfd-platform/backend/integrations/pipeline/: __init__.py  orchestrator.py
cfd-platform/backend/integrations/vtk/: __init__.py  client.py
cfd-platform/backend/models/: database.py  domain.py
cfd-platform/backend/schemas/: mesh.py  optimization.py  project.py  simulation.py  visualization.py
cfd-platform/backend/services/: ai.py  base.py  integration.py  mesh_service.py  optimization_service.py  simulation_service.py  visualization_service.py
cfd-platform/backend/src/: index.ts  package.json  tsconfig.json
cfd-platform/backend/src/cfd_backend/: database.py  main.py
cfd-platform/backend/src/cfd_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cfd-platform/backend/src/services/: analysisOrchestrator.ts  cacheManager.ts  pluginManager.ts
cfd-platform/backend/surrogates/: __init__.py  base.py  gaussian_process.py  neural_network.py  polynomial_chaos.py  rbf.py
cfd-platform/backend/tasks/: mesh_tasks.py  optimization_tasks.py  simulation_tasks.py
cfd-platform/backend/tests/: cfd_conftest.py  conftest.py  test_cfmesh_workflow.py  test_desktop_startup.py  test_engine_registry.py  test_freecad_geometry_formats.py  test_full_pipeline.py  test_gmsh_boundary_groups.py  test_gmsh_geometry_fallback.py  test_openfoam_recipe.py  test_optimization_adapter.py  test_pdf_report.py  test_surrogate_artifacts.py  test_workflow_artifacts.py
cfd-platform/backend/tests/test_api/: test_health.py  test_projects.py
cfd-platform/backend/tests/test_core/: test_config.py
cfd-platform/backend/websocket/: manager.py
cfd-platform/backend/worker/: celery_app.py  tasks.py
cfd-platform/capabilities/: main.json
cfd-platform/core/: __init__.py  config.py  database.py  errors.py  logging.py  security.py
cfd-platform/db/: __init__.py  models.py
cfd-platform/docs/: README.md  api-reference.md  architecture.md  deployment.md  development.md  engine-integration-matrix.md
cfd-platform/frontend/: .eslintrc.cjs  eslint.config.cjs  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
cfd-platform/frontend/src/: App.css  App.tsx  index.css  main.ts  main.tsx  tailwind.css  vite-env.d.ts
cfd-platform/frontend/src/components/: CFDAppShell.ts  Dashboard.tsx  ErrorBoundary.ts  ErrorBoundary.tsx  Header.ts  Header.tsx  Layout.ts  Layout.tsx  LoadingSpinner.ts  LoadingSpinner.tsx  MeshViewer.ts  MeshViewer.tsx  MeshesView.tsx  OptimizationPanel.ts  OptimizationPanel.tsx  PostProcessingView.tsx  ProjectsView.tsx  SettingsView.tsx  Sidebar.ts  Sidebar.tsx  SimulationControls.ts  SimulationControls.tsx  SimulationViewer.ts  SimulationViewer.tsx  SimulationsView.tsx  Viewer3D.ts  Viewer3D.tsx  base.ts  index.ts
cfd-platform/frontend/src/engine/: progressiveAnalysis.ts
cfd-platform/frontend/src/hooks/: useMesh.ts  useOptimization.ts  useProjects.ts  useSimulation.ts  useVisualization.ts
cfd-platform/frontend/src/pages/: DashboardPage.ts  DashboardPage.tsx  DependencyManagerPage.tsx  MeshPage.ts  MeshPage.tsx  OptimizationPage.ts  OptimizationPage.tsx  PipelinePage.ts  PipelinePage.tsx  ProjectPage.ts  ProjectPage.tsx  (+13 more)
cfd-platform/icons/: icon.icns
cfd-platform/infrastructure/k8s/: backend-deployment.yaml  frontend-deployment.yaml  redis-deployment.yaml  storage.yaml  worker-deployment.yaml
cfd-platform/installer/src/: HXCFD.iss  dependencies.iss  dependencies.json  ui.iss  verify.iss
cfd-platform/schemas/: __init__.py  mesh.py  optimization.py  project.py  simulation.py  visualization.py
cfd-platform/shared/schemas/: mesh.py  optimization.py  project.py  simulation.py  user.py  visualization.py
cfd-platform/shared/types/: index.ts
cfd-platform/src/: backend.rs  commands.rs  main.rs
cfd-platform/src-tauri/src/: lib.rs  main.rs
(+153 files in other folders)
