[package]
name = "cfd-platform-tauri"
version = "1.0.0"
description = "CFD Platform - Tauri Desktop Application"
authors = ["CFD Platform Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
fs_extra = "1.3"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["default"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
once_cell = "1.19"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"